src/snapshots/jjpwrgem__cli__tests__object_empty_then_open.snap
---
source: src/cli.rs
expression: annotated
---
error: unexpected token `{` after json finished
 --> stdin:1:3
  |
1 | {}{
  |   ^
  |
help: consider removing the trailing content (starting with `{`)
  |
1 - {}{
1 + {}
  |
